--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+--index-url https://pypi.org/simple
+--extra-index-url https://download.pytorch.org/whl/cu126
+--extra-index-url https://pypi.ngc.nvidia.com
 absl-py==2.2.2
 accelerate==1.5.2
 aiohappyeyeballs==2.6.1
@@ -64,7 +67,7 @@ nvidia-curand-cu12==10.3.7.77
 nvidia-cusolver-cu12==11.7.1.2
 nvidia-cusparse-cu12==12.5.4.2
 nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.21.5
+#nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
 packaging==24.2
@@ -112,7 +115,7 @@ tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.50.1
-triton==3.2.0
+#triton==3.2.0
 typing_extensions==4.13.0
 tzdata==2025.2
 urllib3==2.3.0
